fixed html layout bug

--- a/frontend/styles/styles.css
+++ b/frontend/styles/styles.css
@@ -14,3 +14,22 @@
 .character-container {
   height: 3rem;
 }
+
+.character-btn {
+  width: 1.5rem;
+}
+
+.player-btn {
+  width: 1.5rem;
+}
+
+.op-btn {
+  width: 2.2rem;
+}
+.op-btn2 {
+  width: 1.8rem;
+}
+
+.bg-red {
+  background-color: red;
+}
